[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
categories = ["command-line-utilities", "development-tools"]
description = "A CLI tool for converting Solana private key from/to base58 to/from json"
edition = "2021"
license = "MIT"
name = "solana-base58-json-converter"
repository = "https://github.com/dovahcrow/solana-base58-json-converter"
version = "0.2.0"

[dependencies]
anyhow = "1"
bs58 = "0.5"
fehler = "1"
serde_json = "1"
shellexpand = "3"
solana-sdk = "2"
clap = { version = "4", features = ["derive", "env"] }


[[bin]]
name = "sbjc"
path = "src/main.rs"
